Fix spacing inside share container elements

--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,13 @@ body{
         width: 300px;
         height: 55px;
         border-radius: 0px 0px 10px 10px;
+        justify-content: start;
+        padding-left: 20px;
+        gap: 20px;
+    }
+
+    .share__container p{
+        padding-right: 10px;
     }
 
     .triangle{
